# ros2-6dof-pick-place-arm

./: .gitignore  README.md  test.urdf
src/arm_bringup/: CMakeLists.txt  package.xml
src/arm_bringup/launch/: bringup.launch.py
src/arm_control/: CMakeLists.txt  package.xml
src/arm_control/arm_control/: gripper_controller.py  monitor_joints.py  moveit_interface.py  pick_place_node.py
src/arm_control/launch/: arm_control.launch.py
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/launch/: display.launch.py
src/arm_description/urdf/: arm.urdf.xacro  arm_gazebo.xacro  arm_ros2_control.xacro  materials.xacro  strip_comments.py  xacro_clean.py
src/arm_gazebo/: CMakeLists.txt  package.xml
src/arm_gazebo/config/: ros2_controllers.yaml
src/arm_gazebo/launch/: arm_gazebo.launch.py
src/arm_gazebo/worlds/: arm_world.world
src/arm_moveit_config/: CMakeLists.txt  package.xml
src/arm_moveit_config/config/: arm.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  trajectory_execution.yaml
src/arm_moveit_config/config/planning_pipelines/: ompl_planning.yaml
src/arm_moveit_config/config/rviz/: moveit.rviz
src/arm_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
src/arm_vision/: CMakeLists.txt  package.xml
src/arm_vision/arm_vision/: camera_tf_broadcaster.py  color_detector.py  coord_transformer.py  debug_yolo.py  easyocr_detector.py  yolo_detector.py
src/arm_vision/config/: vision_params.yaml
src/arm_vision/launch/: vision.launch.py
