<?xml version="1.0"?>
<!-- arm_control/package.xml -->
<package format="3">
  <name>arm_control</name>
  <version>1.0.0</version>
  <description>
    High-level control nodes for the 6-DOF robotic arm.
    Implements the pick-and-place pipeline using MoveIt2 Python API,
    gripper control, and integration with the vision pipeline.
  </description>

  <maintainer email="user@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>action_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>arm_description</depend>
  <depend>arm_moveit_config</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
