<?xml version="1.0"?>
<!-- ============================================================
     arm_description/package.xml
     Describes the robot URDF/Xacro, meshes, and config files.
     ============================================================ -->
<package format="3">
  <name>arm_description</name>
  <version>1.0.0</version>
  <description>
    URDF/Xacro description for the 6-DOF robotic arm with parallel gripper.
    Includes visual geometry, collision geometry, inertia matrices,
    ros2_control tags, and Gazebo material/physics tags.
  </description>

  <maintainer email="user@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
