<?xml version="1.0"?>
<!-- ============================================================
     arm_moveit_config/package.xml
     MoveIt2 configuration package for the 6-DOF arm.
     Contains SRDF, kinematics config, planning pipelines,
     controller config, and launch files.
     ============================================================ -->
<package format="3">
  <name>arm_moveit_config</name>
  <version>1.0.0</version>
  <description>
    MoveIt2 configuration for the 6-DOF robotic arm.
    Provides motion planning, inverse kinematics (KDL),
    SRDF semantic description, and all MoveIt2 launch files.
  </description>

  <maintainer email="user@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>arm_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
